# retrospekt

./: .env.example  .gitignore  .releaserc.json  CHANGELOG.md  CLAUDE.md  Makefile  README.md  codecov.yml  compose.yml  kubernetes.yaml  noxfile.py  package-lock.json  package.json  playwright.config.ts  playwright.screenshots.config.ts
.github/workflows/: ci.yml  docker-publish.yml  release.yml
backend/: .coverage  Dockerfile  pyproject.toml
backend/src/: config.py  database.py  dependencies.py  main.py
backend/src/models/: feedback.py  requests.py  session.py
backend/src/repositories/: feedback_repo.py  session_repo.py  stats_repo.py
backend/src/routers/: _shared.py  cards.py  feedback.py  groups.py  notes.py  sessions.py  stats.py
backend/src/services/: sentry_service.py  sse_manager.py
backend/tests/: conftest.py  test_assignee.py  test_cards.py  test_columns.py  test_feedback.py  test_groups.py  test_health.py  test_notes.py  test_open_facilitator.py  test_phases.py  test_publish.py  test_reactions.py  test_repo.py  test_sentry_service.py  test_sessions.py  test_sse.py  test_stats.py  test_timer.py  test_voting.py
docs/dependency-graphs/: frontend-overview.mmd
e2e/: screenshots.spec.ts  session.spec.ts
frontend/: Dockerfile  docker-entrypoint.sh  eslint.config.mjs  index.html  nginx.conf  package-lock.json  package.json  playwright-ct.config.ts  tsconfig.json  vite.config.ts  web-test-runner.config.mjs
frontend/scripts/: parse-changelog.ts
frontend/src/: api.test.ts  api.ts  board-notes.spec.ts  env.d.ts  icons.ts  (+26 more)
hooks/: pre-commit  pre-push  shared.sh
(+25 files in other folders)
